strike m1 as it is not really relevant for update information, but probably confusing

--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -1,11 +1,11 @@
 ---
 title: Chat Requests, Multi-Account, Connectivity
 author: bjoern
-image: ../assets/blog/2021-08-m1.jpg
+image: ../assets/blog/2021-08-chat-request-small.png
 ---
 
 **Delta Chat 1.22** is out!
-This post explains the most important changes and happenings around this release.
+This post explains the most important changes in this release.
 
 
 ## Much better Chat Requests
@@ -80,23 +80,6 @@ plus some other useful information, eg. **Quota information** if possible by you
 
 The connectivity view will get some more improvements the next time,
 also there - stay tuned :)
-
-
-## M1 Gathering
-
-<img src="../assets/blog/2021-08-m1.jpg" style="width:300px; float:right; clear:both; margin-left:.4em; margin-bottom:.2em;" alt="M1 and Delta Chat logos" />
-
-Some Delta Chat developers and friends
-met for two weeks in August at M1, a place in Hamburg.
-We chilled, discussed and settled things -
-among them, this 1.22 release.
-
-The meeting satisfies a whole blog post on its own.
-However, for now,
-I just want to take the chance to shout a big **"Thank you!"**
-to everyone making that possible.
-And also send some explicit greetings to everyone who could not make it to M1,
-for pandemic or whatever reasons.
 
 
 ## Get the Updates
