--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -84,8 +84,10 @@ also there - stay tuned :)
 
 ## Get the Updates
 
-**Check out [get.delta.chat](https://get.delta.chat) for the new versions** -
-as always, shipping to all stores will take some time.
+**Check out [get.delta.chat](https://get.delta.chat)** for the new Android/iOS versions,
+Desktop will need a bit more time.
+As always, shipping to all stores will take some time.
+
 
 And as usual, the new versions include even
 [much, much more to discover](https://delta.chat/en/download#changelogs).
