--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -31,8 +31,9 @@ or **Archive** it if you do not want to think about it ;)
 And, of course, you can **Block** or **Delete** the request.
 
 Note: If you are updating from an older version of Delta Chat,
-you will find your old request in the Archive now -
-that is now **easier accessible** directly from the menu (Android/Desktop)
+you will find your old requests in the archive now.
+As always, the archive is placed at the chat list,
+however, is now also **easier accessible** directly from the menu (Android),
 or from the settings (iOS).
 
 
@@ -70,7 +71,8 @@ The third big part: We made the **connectivity visible:**
 
 <img src="../assets/blog/2021-08-connectivity.png" style="width:260px; clear:both; margin-bottom:.2em;" alt="Screenshot showing 'Not connected' in the title bar" />
 
-The **title bar** now shows if you are not connected for whatever reason,
+The **title bar** (Android/iOS) or a **toast notification** (Desktop)
+now shows if you are not connected for whatever reason,
 may it be lost WIFI or because your provider is down.
 
 A tap on the title
@@ -78,14 +80,12 @@ opens the **new Connectivity View**
 that gives you **detailed information** about the reason –
 plus some other useful information, eg. **Quota information** if possible by your provider.
 
-The connectivity view will get some more improvements the next time,
-also there - stay tuned :)
+<img src="../assets/blog/2021-08-connectivity-desktop.png" style="width:90%;" alt="Screenshot showing 'Connectivity view'" />
 
 
 ## Get the Updates
 
-**Check out [get.delta.chat](https://get.delta.chat)** for the new Android/iOS versions,
-Desktop will need a bit more time.
+**Check out [get.delta.chat](https://get.delta.chat)** for the new versions.
 As always, shipping to all stores will take some time.
 
 
