adding missing words, adapt 'archive' statements

--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -31,10 +31,9 @@ or **Archive** it if you do not want to think about it ;)
 And, of course, you can **Block** or **Delete** the request.
 
 Note: If you are updating from an older version of Delta Chat,
-you will find your old requests in the archive now.
-As always, the archive is placed at the chat list,
-however, is now also **easier accessible** directly from the menu (Android),
-or from the settings (iOS).
+you will find your old requests in the archive at the end of the chat list.
+On Android and iOS, the archive is now also **easier accessible**
+directly from the menu (Android) or from the settings (iOS).
 
 
 ## Multi-Account Added or Improved
