--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -32,7 +32,7 @@ And, of course, you can **Block** or **Delete** the request.
 
 Note: If you are updating from an older version of Delta Chat,
 you will find your old requests in the archive at the end of the chat list.
-On Android and iOS, the archive is now also **easier accessible**
+Moreover, on Android and iOS, the archive is now **easier accessible**
 directly from the menu (Android) or from the settings (iOS).
 
 
