--- a/_posts/2021-10-06-blog-GDPR.md
+++ b/_posts/2021-10-06-blog-GDPR.md
@@ -1,6 +1,24 @@
 ---
-title: Yeah! We have a new GDPR! 
-author: Yettte and treefit 
+title: Delta Chat rules!  We updated our GDPR... for our apps and website!
+author: Jette and treefit 
 ---
-## new GDPR Post
-Hier kommt die neue GDPR Ankuendigung hin.
+## GDPR 2.0
+It has been a while since the last update on Delta Chat privacy policy and some things have changed. We are still trying to keep personal data processing to a minimum and stick to our principle "privacy by design", but as you know, the internet does not work without data. 
+
+We therefore appointed a data protection officer and worked out new privacy statements for the apps concerning push notifications, data in the app, app permissions and an explanation of platform dependent processing.
+
+- a [GDPR compliance summary page for the
+  Delta/Android app](https://delta.chat/en/gdpr). 
+  TLDR: delta.chat has **privacy by design**: no Delta 
+  servers, no address book upload, by-default e2e encryption.
+
+- a [privacy statement for the delta.chat
+  website (now in German AND English!)](https://delta.chat/de/gdpr). 
+  TLDR: no cookies, no tracking, participation in e-mail mailing 
+  lists only on an explicit subscription request. 
+
+If you have any questions or comments please file issues on github 
+or send a message to delta-privacy@merlinux.eu 
+
+
+
