fixing featured image of GDPR blogpost

--- a/_posts/2021-10-06-blog-GDPR.md
+++ b/_posts/2021-10-06-blog-GDPR.md
@@ -1,7 +1,7 @@
 ---
 title: Delta Chat rules...  We updated our GDPR for our apps and website!
 author: jette and treefit
-image: [certificate_screenshot-blogpost](https://user-images.githubusercontent.com/82230211/138293511-ce9a5786-7267-43ec-90a8-a6786e3ee956.png)
+image: ../assets/blog/privacy-policy-certificate.png
 ---
 
 ## Delta Chat rules...  We updated our GDPR for our apps and website!
