--- a/_data/lang/ca.yml
+++ b/_data/lang/ca.yml
@@ -26,10 +26,10 @@ ca:
     source_code: Codi font
     install_via_packagemanager: Instal·la'l via Gestor de Paquets
     outdated: desactualitzat
-    dl_flathub: Download from Flathub
-    dl_microsoft: Download from Microsoft Store
-    dl_mac_appstore: Download on Apple Mac AppStore
-    dl_appstore: Download on Apple AppStore
+    dl_flathub: Descarrega'l a Flathub
+    dl_microsoft: Descarrega'l a Microsoft Store
+    dl_mac_appstore: Descarrega'l a Apple Mac AppStore
+    dl_appstore: Descarrega'l a Apple AppStore
     beta_on: Beta a
     dl_fdroid: Aconsegueix-lo a F-Droid
     gplay: Aconsegueix-lo a Google Play
@@ -37,5 +37,5 @@ ca:
       small: Aconsegueix-lo a
       title: Appstore d'Amazon
     dl_apk_text:
-      before: You can also download as
+      before: També el pots descarregar com a
       after: (experimental)
