Apply suggestions from code review
Co-authored-by: holger krekel  <holger@merlinux.eu>

--- a/_posts/2021-10-06-blog-GDPR.md
+++ b/_posts/2021-10-06-blog-GDPR.md
@@ -1,5 +1,5 @@
 ---
-title: We updated our GDPR for our apps and website!
+title: New data protection officer appointed and refined privacy policies
 author: jette, treefit and missytake
 image: ../assets/blog/privacy-policy-certificate.png
 ---
