reworked after review

--- a/_posts/2021-10-06-blog-GDPR.md
+++ b/_posts/2021-10-06-blog-GDPR.md
@@ -1,22 +1,14 @@
 ---
 title: New data protection officer appointed and refined privacy policies
-author: jette, treefit and missytake
-image: ../assets/blog/privacy-policy-certificate.png
+author: jette, treefit, missytake and holga
+image: ../assets/blog/fabian-schmieder.jpeg
 ---
 
-It has been a while since the last update on Delta Chat privacy policy and some things have changed. We are still trying to keep personal data processing to a minimum and stick to our principle "privacy by design", but as you know, the internet does not work without data. 
+It has been a while since the last update on Delta Chat privacy policy and some things have changed. We appointed Prof.Dr. Fabian Schmieder of [University of Applied Sciences and Arts Hanover](https://im.f3.hs-hannover.de/en_us/studium/personen/prof-dr-fabian-schmieder/) who is now our data protection officer. He has been helping us for a long time and is not only a great advisor but also a brilliant pianist!:)
 
-We therefore appointed a data protection officer and worked out new privacy statements for the apps giving, for example, more info concerning push notifications, data in the app, app permissions and an explanation of platform dependent processing.
+Jointly we worked with Kai Korte from [LexICT](https://lexict.de) to professionalize and refine our privacy policy. We split the privacy policy into one for the [apps](gdpr), and another separate one for the optional use of the [website](gdpr-website) and community services.
 
-- a [GDPR compliance summary page for the
-  Delta/Android app](gdpr). 
-  TLDR: delta.chat has **privacy by design**: no Delta 
-  servers, no address book upload, by-default e2e encryption.
-
-- a [privacy statement for the delta.chat
-  website (now in German AND English!)](gdpr-website). 
-  TLDR: no cookies, no tracking, participation in e-mail mailing 
-  lists only on an explicit subscription request. 
+As the Russian surveillance authority Roskomnadzor [learned last year](https://twitter.com/delta_chat/status/1256137319150751744) our apps are e-mail apps and do not contact servers other than user-chosen e-mail providers. But if you choose to interact with our website, [support forum](https://support.delta.chat), payment or social media presences, you can read up on our web privacy policy for details. TLDR; no cookies, no tracking, no ads. You are welcome :)
 
 If you have any questions or comments please file issues on github 
 or send a message to delta-privacy@merlinux.eu 
