--- a/_posts/2021-10-06-blog-GDPR.md
+++ b/_posts/2021-10-06-blog-GDPR.md
@@ -6,7 +6,7 @@ image: ../assets/blog/fabian-schmieder.jpeg
 
 It has been a while since the last update on Delta Chat privacy policy and some things have changed. We appointed Prof. Dr. Fabian Schmieder, professor for data protection and media law of the [University of Applied Sciences and Arts Hanover](https://im.f3.hs-hannover.de/en_us/studium/personen/prof-dr-fabian-schmieder/) and coauthor of the standard work [Betrieblicher Datenschutz (Operational data protection)](https://www.beck-shop.de/forgo-helfrich-schneider-betrieblicher-datenschutz/product/24093138), who is now our data protection officer. He has been helping us for a long time and is not only a great advisor but also a brilliant pianist!:)
 
-Jointly we worked with Kai Korte from [LexICT](https://lexict.de) to professionalize and refine our privacy policy. We split the privacy policy into one for the [apps](gdpr), and another separate one for the optional use of the [website](gdpr-website) and community services.
+Jointly we worked with his colleague Kai Korte from [LexICT](https://lexict.de) to professionalize and refine our privacy policy. We split the privacy policy into one for the [apps](gdpr), and another separate one for the optional use of the [website](gdpr-website) and community services.
 
 [Last year](https://twitter.com/delta_chat/status/1256137319150751744) the Russian surveillance authority Roskomnadzor learned that our apps are e-mail apps and do not contact servers other than user-chosen e-mail providers. But if you choose to interact with our website, [support forum](https://support.delta.chat), payment or social media presences, you can read up on our web privacy policy for details. TLDR; no cookies, no tracking, no ads. You are welcome :)
 
