--- a/_posts/2021-10-06-blog-GDPR.md
+++ b/_posts/2021-10-06-blog-GDPR.md
@@ -10,6 +10,6 @@ Jointly we worked with his colleague Kai Korte from [LexICT](https://lexict.de) 
 
 [Last year](https://twitter.com/delta_chat/status/1256137319150751744) the Russian surveillance authority Roskomnadzor learned that our apps are e-mail apps and do not contact servers other than user-chosen e-mail providers. If you optionally make use of our website, [support forum](https://support.delta.chat), payment or social media presences, you can now read up on our web privacy policy for details. TLDR; no cookies, no tracking, no ads. You are welcome :)
 
-If you have any questions or comments please file issues on github 
+If you have any questions or comments please [file issues on Github](https://github.com/deltachat/deltachat-pages/issues/new/choose)
 or send a message to delta-privacy@merlinux.eu 
 
