use another preview image

--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -1,7 +1,7 @@
 ---
 title: Updates on Accounts, Downloads, Group-Joins, Search and more
 author: bjorn, paula (cat photo), kasha (cat)
-image: ../assets/blog/2021-11-13-delta-cat.jpg
+image: ../assets/blog/2021-11-13-account-switcher.png
 ---
 
 Yip, Delta Chat **1.24 is out for Android and iOS:**
