--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -1,6 +1,6 @@
 ---
 title: Updates on Accounts, Downloads, Group-Joins, Search and more
-author: bjorn, paula (cat photo), kasha (cat)
+author: bjorn, kasha (cat)
 image: ../assets/blog/2021-11-13-account-switcher.png
 ---
 
@@ -56,7 +56,7 @@ no matter if they were sent with Delta Chat or with a classical e-mail program.
 
 When scanning a QR code that brings you to a group,
 you **immediately** see that group in your chat list,
-mo matter if the involved devices are **online or not**.
+no matter if the involved devices are **online or not**.
 
 The real handshake runs completely in the background then,
 not blocking you from doing much more important things,
@@ -71,7 +71,7 @@ Some recent changes:
 
 - An In-Chat-Search is now available on Android as well as on iOS
   and allows you to do an **incremental search within any chat**.
-  you start it by the Menu (Android) or the chat's profile (iOS).
+  You start it by the Menu (Android) or the chat's profile (iOS).
 
 - With the **Previous and Next** buttons you can cycle through the result.
 
