fix typos, emojis

--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -11,7 +11,7 @@ Yip, Delta Chat **1.24 is out for Android and iOS:**
 
 <img src="../assets/blog/2021-11-13-account-switcher.png" style="width:250px; float:right; clear:both; margin-left:.5em; margin-bottom:.2em;" alt="Screenshot with Account Switcher" />
 
-Some more steps in out ongoing effort to multi-account improvements:
+Some more steps in our ongoing effort in multi-account improvements:
 
 - The **profile image of the currently selected account**
   is shown directly above the chat list
@@ -60,7 +60,7 @@ no matter if the involved devices are **online or not**.
 
 The real handshake runs completely in the background then,
 not blocking you from doing much more important things,
-as checking out which emoji to chose for your birthdays invitation!
+as checking out which emoji to chose for your birthday invitation 🎉
 
 
 ## Improved Search
