fix typos, punctuation

--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -24,8 +24,8 @@ Some more steps in our ongoing effort in multi-account improvements:
 For iOS, account switching is done in the settings,
 however, some of the ideas will probably also find its way to iOS.
 
-In case you missed the last blogpost
-[multi-account run concurrently meanwhile](2021-08-24-updates#multi-account-added-or-improved) -
+In case you missed the last blogpost:
+[Multi-account runs concurrently meanwhile](2021-08-24-updates#multi-account-added-or-improved) -
 which made things as the _unread message counter_ possible in the first place :)
 
 
@@ -42,7 +42,7 @@ If so, this feature is for you!
 
 Instead of downloading all messages unconditionally you
 can advice Delta Chat to just show a placeholder and a
-**"Download" button for messages larger than some threshold**.
+**"Download" button for messages larger than some threshold.**
 
 Then, you can manually **start download when it really fits.**
 
@@ -55,8 +55,8 @@ no matter if they were sent with Delta Chat or with a classical e-mail program.
 <img src="../assets/blog/2021-11-13-group-invites.jpg" style="width:250px; float:right; clear:both; margin-left:.5em; margin-bottom:.2em;" alt="Screenshot with Account Switcher" />
 
 When scanning a QR code that brings you to a group,
-you **immediately** see that group in your chat list,
-no matter if the involved devices are **online or not**.
+you now **immediately** see that group in your chat list,
+no matter if the involved devices are **online or not.**
 
 The real handshake runs completely in the background then,
 not blocking you from doing much more important things,
@@ -70,7 +70,7 @@ but there were lots of improvements over the last versions as well.
 Some recent changes:
 
 - An In-Chat-Search is now available on Android as well as on iOS
-  and allows you to do an **incremental search within any chat**.
+  and allows you to do an **incremental search within any chat.**
   You start it by the Menu (Android) or the chat's profile (iOS).
 
 - With the **Previous and Next** buttons you can cycle through the result.
@@ -84,7 +84,7 @@ Some recent changes:
 _Words from a super-sceptical cat ..._ but well, something's left, indeed:
 
 - **Stickers** - several enthusiasts made is possible
-  to display stickers, **even animated ones, are displayed on all platforms**.  
+  to display stickers, **even animated ones, are displayed on all platforms.**
   There is no build in sticker selector -
   however, many platforms already have one build into the standard keyboard
   or you can install other apps that handle that for you,
