--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -88,7 +88,7 @@ _Words from a super-sceptical cat ..._ but well, something's left, indeed:
   There is no build in sticker selector -
   however, many platforms already have one build into the standard keyboard
   or you can install other apps that handle that for you,
-  (this probably statisfies a separate blog posts :)
+  (this probably statisfies a separate blog post :)
   
 - **Get warned when your mailbox runs full** - since the last update,
   the current "quota usage" is displayed in the connectivity view.
