add a link explaining broadcast lists

--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -96,9 +96,9 @@ _Words from a super-sceptical cat ..._ but well, something's left, indeed:
   when your quota is about to exceed - one at 80% and another at 95% usage.
 
 - By huge user demand,
-  we added **Broadcasts Lists,** as known from other messengers,
+  we added [**Broadcasts Lists,** as known from other messengers](https://github.com/deltachat/deltachat-android/pull/2060),
   as an experimental feature.
-  If you like you can test them already today at "Settings / Advanced / Experimental Features".
+  You can test them already today at "Settings / Advanced / Experimental Features".
 
 - **Even more** to discover 
   [in the changelogs](download#changelogs).
