--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -1,6 +1,6 @@
 ---
 title: Updates on Accounts, Downloads, Group-Joins, Search and more
-author: bjorn, kasha (cat)
+author: björn, kasha (cat)
 image: ../assets/blog/2021-11-13-account-switcher.png
 ---
 
