fix typo, thanks to dc testing group

--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -83,7 +83,7 @@ Some recent changes:
 
 _Words from a super-sceptical cat ..._ but well, something's left, indeed:
 
-- **Stickers** - several enthusiasts made is possible
+- **Stickers** - several enthusiasts made it possible
   to display stickers, **even animated ones, are displayed on all platforms.**
   There is no build in sticker selector -
   however, many platforms already have one build into the standard keyboard
