--- a/_posts/2021-11-13-releases.md
+++ b/_posts/2021-11-13-releases.md
@@ -85,8 +85,8 @@ _Words from a super-sceptical cat ..._ but well, something's left, indeed:
 
 - **Stickers** - several enthusiasts made it possible
   to display stickers, **even animated ones, are displayed on all platforms.**
-  There is no build in sticker selector -
-  however, many platforms already have one build into the standard keyboard
+  There is no built-in sticker selector -
+  however, many platforms already have one built into the standard keyboard
   or you can install other apps that handle that for you,
   (this probably statisfies a separate blog post :)
   
