--- a/_data/lang/ru.yml
+++ b/_data/lang/ru.yml
@@ -7,7 +7,7 @@ ru:
 
   menu:
     home: Главная
-    download: Загрузка
+    download: Скачать
     blog: Блог
     contribute: Содействие
     help: FAQ
