--- a/_data/lang/sk.yml
+++ b/_data/lang/sk.yml
@@ -9,7 +9,7 @@ sk:
     home: Domov
     download: Stiahnuť
     blog: Blog
-    contribute: Prisipieť
+    contribute: Prispieť
     help: Často kladené otázky
     forum: Fórum
 
