We only replace contacts in one group for now

--- a/_posts/2022-07-10-aeap.md
+++ b/_posts/2022-07-10-aeap.md
@@ -7,7 +7,7 @@ In Delta Chat 1.32, we added experimental support for changing your email addres
 
 But first things first: Nothing immediately happens when you change your address, and your encryption key stays the same and is not altered[^1]. This also means that your contacts don't know that you changed your address yet, and will continue to send messages to your old address. For this reason, you should configure your old email provider so that it forwards all emails to your new email address, and everything will continue to work completely smoothly. If you don't do this, messages sent to your old address won't arrive (obviously, because they are not forwarded); in order to make many contacts aware that your address changed, you can send a quick message to the groups you are in, so that they send their messages to your new address; this doesn't have to be "I changed my address", it could be an image of a flower or anything. And, you know, just check your old account from time to time and reply from your new account if someone still has your old address, just as you would do it without Delta Chat.
 
-Because, as already mentioned, whenever someone receives any message from you - be it in a group or a private message - their Delta Chat app will automatically replace your contact in all groups with them.
+Because, as already mentioned, whenever you send a message to a group, the Delta Chat apps of everyone in that group will automatically remove your old address and add your new address. In the feature, your contacts might replace you in _all_ groups when they get a message from you, instead of just the group where you sent a message to.
 
 Summarizing, this is what you have to do in order to change your email address:
 
