add screenshots, format some text, roughly interate over
- tune down the "this may have bugs!" - we intially say it is experimental,
  if wanted, however, we can re-add a sentence near the end
  (that would also make the footnote a bit nicer)
  (the footnote can also be made nicer in the css)
- bolden some parts, add some linebreaks
- fix some typos

--- a/_posts/2022-07-10-aeap.md
+++ b/_posts/2022-07-10-aeap.md
@@ -1,13 +1,25 @@
 ---
 title: Changing your email address made easier 
 author: hocuri
+image: ../assets/blog/2022-07-aeap-0.png
 ---
 
-In Delta Chat 1.32, we added experimental support for changing your email address and telling your contacts about it, which we call AEAP (Automatic Email Address Porting). This means that you can now change your own email address in the settings (under "Password and account" - TODO, on Android we may want to make the button stand out more since I myself sometimes have issues seeing it; still then, it's unfortunately rather hard to describe where it is), and things will just work! Kind of, this is still a very new feature so there may be bugs, and also, your contacts will only know that you changed your address once once they got a message from you. Delta Chat doesn't do any magic here, it just makes changing your address a bit smoother.
+In Delta Chat 1.32, we added experimental support for changing your email address 
+and telling your contacts about it.
 
-But first things first: Nothing immediately happens when you change your address, and your encryption key stays the same and is not altered[^1]. This also means that your contacts don't know that you changed your address yet, and will continue to send messages to your old address. For this reason, you should configure your old email provider so that it forwards all emails to your new email address, and everything will continue to work completely smoothly. If you don't do this, messages sent to your old address won't arrive (obviously, because they are not forwarded); in order to make many contacts aware that your address changed, you can send a quick message to the groups you are in, so that they send their messages to your new address; this doesn't have to be "I changed my address", it could be an image of a flower or anything. And, you know, just check your old account from time to time and reply from your new account if someone still has your old address, just as you would do it without Delta Chat.
+This means that you can now **change your own email** address at "Settings / Your Profile / Password and Account"
+**and things will just work!** <br>&nbsp;
 
-Because, as already mentioned, whenever you send a message to a group, the Delta Chat apps of everyone in that group will automatically remove your old address and add your new address. In the feature, your contacts might replace you in _all_ groups when they get a message from you, instead of just the group where you sent a message to.
+<img src="../assets/blog/2022-07-aeap-1.png" style="width:230px;" alt="" />
+<img src="../assets/blog/2022-07-aeap-2.png" style="width:230px;" alt="" />
+
+_We call this AEAP: Automatic Email Address Porting._
+
+Your contacts will only know that you changed your address **once they got a message from you.** Delta Chat doesn't do any magic here, it just makes changing your address a bit smoother.
+
+_But first things first:_ Nothing immediately happens when you change your address, and your encryption key stays the same and is not altered[^1]. This also means that your contacts don't know that you changed your address yet, and will continue to send messages to your old address. For this reason, you should **configure your old email provider so that it forwards all emails** to your new email address, and everything will continue to work completely smoothly. If you don't do this, messages sent to your old address won't arrive (obviously, because they are not forwarded); in order to make many contacts aware that your address changed, you can send a quick message to the groups you are in, so that they send their messages to your new address; this doesn't have to be "I changed my address", it could be an image of a flower or anything. And, you know, just check your old account from time to time and reply from your new account if someone still has your old address, just as you would do it without Delta Chat.
+
+Because, as already mentioned, whenever you send a message to a group, the Delta Chat apps of everyone in that group will **automatically remove your old address and add your new address.** In the future, your contacts might replace you in _all_ groups when they get a message from you, instead of just the group where you sent a message to.
 
 Summarizing, this is what you have to do in order to change your email address:
 
@@ -16,4 +28,6 @@ Summarizing, this is what you have to do in order to change your email address:
 - If you can't, just send a quick message to the groups you are in, and check your old account from time to time.
 - Your groups (also verified ones!) will continue to work as normal.
 
-[^1]: For those who know a bit more about PGP: This means that the UID field of your PGP key will not be changed and still contain the old address. This is a design choice to keep things simple, and it's possible because Autocrypt says that "the content of the user id packet is only decorative" (https://autocrypt.org/level1.html#openpgp-based-key-data).
+---
+
+[^1]: For those who know a bit more about PGP: Not altering the encryption key means that the UID field of your PGP key will not be changed and still contain the old address.  This is a design choice to keep things simple, and it's possible because Autocrypt says that "the content of the user id packet is only decorative" (<https://autocrypt.org/level1.html#openpgp-based-key-data>).
