fix header line

--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -1,5 +1,5 @@
 ---
-title: Delta Chat 1.32: e-mail address porting, improved provider support & moving to Tokio :)
+title: Delta Chat 1.32 brings e-mail address porting, improved provider support & moving to Tokio
 author: hocuri, holga
 image: ../assets/blog/2022-07-aeap-0.png
 ---
