add a note of thanks to NLNET

--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -1,10 +1,10 @@
 ---
-title: Delta Chat 1.32 brings e-mail address porting, improved provider support & moving to Tokio
+title: Introducing Automatic E-mail Address Porting (AEAP)
 author: hocuri, holga
 image: ../assets/blog/2022-07-aeap-0.png
 ---
 
-The Delta Chat 1.32 introduces support for new providers (most notably 163.com), a slew of bug fixes and the first release of AEAP mechanisms. AEAP enables or e-mail what number porting does for mobiles.
+The Delta Chat 1.32 releases introduced support for new providers (most notably 163.com), a slew of bug fixes and the first release of AEAP mechanisms. AEAP enables for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
 
 TLDR; How to migrate to a new provider with Delta Chat:
 
@@ -33,4 +33,6 @@ In subsequent releases we hope to make the process quicker that all chat members
 
 The core part of any Delta Chat app or Bot is the core library. [In Kyiv around May 2019 we started migrating this library to use "Rust"](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse).  Later on we migrated to so called "async" Rust, the state of the art way of dealing with networking and messaging tasks in an internally asynchronous manner.  There are two major eco-systems, one is term "async-std" and the other is named "Tokio" and has found a lot more adoption in the last years.  Delta Chat now also adopted this more popular approach and it wasn't actually that hard to do the migration.  Kudos to living and adaptable eco-systems :)
 
+## Special thanks to NLNET and their NGI work
 
+The work on AEAP is already ongoing for well over a year (on and off) and has been funded through the [NLNET foundation](https://nlnet.nl/project/EmailPorting/), in turn funded by the European Commission. We particularly like to thank Michiel, Jost and the rest of the NLNET NGI team for smooth handling of advising, reporting and financing.
