--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -29,10 +29,10 @@ If you send a message to any chat, the other chat members will not complain if t
 
 In subsequent releases we hope to make the e-mail address rewriting also happen for non-verified groups. For this we need to [harden generic e-mail authenticity verification](https://github.com/deltachat/deltachat-core-rust/issues/3507) to the point of enabling AEAP for all encrypted chat groups (verified or not).
 
-## Moving to "Tokio" with Delta Chat 1.32 releases
+## Implementation notes: moving to "Tokio" async Rust
 
-The core part of any Delta Chat app or Bot is the core library. [In Kyiv around May 2019 we started migrating this library to use "Rust"](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse).  Later on we migrated to so called "async" Rust, the state of the art way of dealing with networking and messaging tasks in an internally asynchronous manner.  There are two major eco-systems, one is term "async-std" and the other is named "Tokio" and has found a lot more adoption in the last years.  Delta Chat now also adopted this more popular approach and it wasn't actually that hard to do the migration.  Kudos to living and adaptable eco-systems :)
+The inner part of any Delta Chat app or Bot is the "core" library. [In Kyiv around May 2019 we started migrating this library to use the "Rust" programming language](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse).  Later on we migrated to so called "async" Rust, the state of the art way of dealing with networking and messaging tasks. There are two major approaches, one goes under the term "async-std" and the other under "Tokio". The latter has found a lot more adoption in the last years and we finally now also moved to Tokio. Kudos to living and adaptable eco-systems :)
 
-## Special thanks to NLNET and their NGI work
+## Special thanks to NLNET and their Next-Generation-Internet work
 
 The work on AEAP is already ongoing for well over a year (on and off) and has been funded through the [NLNET foundation](https://nlnet.nl/project/EmailPorting/), in turn funded by the European Commission. We particularly like to thank Michiel, Jost and the rest of the NLNET NGI team for smooth handling of advising, reporting and financing.
