fixes and some refinements

--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -4,7 +4,7 @@ author: hocuri, holga
 image: ../assets/blog/2022-07-aeap-0.png
 ---
 
-The Delta Chat 1.32 releases introduced support for new providers (most notably 163.com), a slew of bug fixes and the first release of AEAP mechanisms. AEAP enables for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
+The Delta Chat 1.32 releases introduced support for new providers (most notably 163.com), a bigger internal "move to Tokio" infrastructure change resulting in better speed, and the first release of AEAP mechanisms. AEAP enables for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
 
 TLDR; How to migrate to a new provider with Delta Chat:
 
@@ -19,7 +19,7 @@ By design, no user confirmation dialogues aka "is this ok?" / "are you sure?" di
 
 ### How it works under the hood
 
-Nothing immediately happens after you successfully changed to your new e-mail address in the settings screen.  No messages are generated in the background, no network activity to inform anyone takes place. Your internal identification and encryption key stay the same and are not altered[^1]. Your contacts don't know that you changed your address yet and will continue to send messages to your old address. For this reason, you better **configure your old email provider so that it forwards all emails** to your new email address. Otherwise messages sent to your old address won't arrive because Delta Chat does not try to retrieve messages from there after the change. If you don't know how to setup e-mail forwarding for your old provider please ask on the [Support Forum](https://support.delta.chat).
+Nothing immediately happens after you successfully changed to your new e-mail address in the settings screen.  No messages are generated in the background, no network activity to inform anyone takes place. Your internal identification and encryption keys stay the same and are not altered[^1]. Your contacts don't know that you changed your address yet and will continue to send messages to your old address. For this reason, you better **configure your old email provider so that it forwards all emails** to your new email address. Otherwise messages sent to your old address won't arrive because Delta Chat does not try to retrieve messages from there after the change. If you don't know how to setup e-mail forwarding for your old provider please ask on the [Support Forum](https://support.delta.chat).
 
 If you send a message to any chat, the other chat members will not complain if they see it coming from your new e-mail address. They might see a "~" in front of your address. In this case they will still reply to your old e-mail address which is why it's important to configure e-mail forwarding on your old provider. Things are smoother if you send a message to a "verified group chat" because recipients there will automatically update to your new e-mail address and not send chat messages to your old e-mail address anymore! Verified groups are a an experiemtal but pretty stable feature of Delta Chat. Verified groups have blue tickmarks and members can only join after verifying with a pre-existing member. See [COUNTERMITM protocols](https://countermitm.readthedocs.io/en/latest/new.html) for more details.
 
@@ -29,9 +29,14 @@ If you send a message to any chat, the other chat members will not complain if t
 
 In subsequent releases we hope to make the e-mail address rewriting also happen for non-verified groups. For this we need to [harden generic e-mail authenticity verification](https://github.com/deltachat/deltachat-core-rust/issues/3507) to the point of enabling AEAP for all encrypted chat groups (verified or not).
 
-## Implementation notes: moving to "Tokio" async Rust
+We are generally colloborating with maintainers of [mailcow](https://mailcow.email), a popular docker-based distribution for self-hosted e-mail.  We are pondering to add a way to register "e-mail forwarding" so that moving from a mailcow-server instance to another provider would be seemless and would not require the manual provider-specific step of "setup forwarding of mails to your new address". We would be down to "change your e-mail adddress" and incrementally all (chat) e-mails will flow to your new provider.
 
-The inner part of any Delta Chat app or Bot is the "core" library. [In Kyiv around May 2019 we started migrating this library to use the "Rust" programming language](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse).  Later on we migrated to so called "async" Rust, the state of the art way of dealing with networking and messaging tasks. There are two major approaches, one goes under the term "async-std" and the other under "Tokio". The latter has found a lot more adoption in the last years and we finally now also moved to Tokio. Kudos to living and adaptable eco-systems :)
+After gathering more experience, we may also suggest additions to the [Autocrypt encryption standard](https://autocrypt.org) such that account-migration could be implemented by e-mail apps other than Delta Chat.
+
+
+## Implementation notes: moving to "Tokio" and getting faster
+
+The inner part of any Delta Chat app or Bot is the "core" library. [In Kyiv around May 2019 we started migrating this library to use the "Rust" programming language](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse).  Later on we migrated to so called "async" Rust, the state of the art way of dealing with concurrent networking and messaging tasks.  Rust has two major approaches, one goes under the term "async-std" and the other under "Tokio". The latter has found a lot more adoption in the last years and we now also moved our code base to Tokio. As a nice side effect, many users reported speed improvements :)
 
 ## Special thanks to NLNET and their Next-Generation-Internet work
 
